# django-custom-storage

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.rst  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/workflows/: ci.yaml  docs.yaml  pr-rebase-on-push.yaml  upgrade-dependency.yaml
community/contributing/: index.html
community/references/: index.html
community/third-party-packages/: index.html
docs/: index.md
docs/community/: contributing.md  references.md  third-party-packages.md
docs/tutorial/: example.md  settings.md  storage-classes.md
news/: +app-config.feature  +debug-settings.bugfix  +private-storage.feature
news/bugfix/: compress-s3-output-alias.rst
requirements/: dev.in  py310-dev.txt  py310-django32.txt  py310-django42.txt  py310-django52.txt  py311-dev.txt  py311-django32.txt  py311-django42.txt  py311-django52.txt  py312-django42.txt  py312-django52.txt  py313-django52.txt  py314-django52.txt  py38-dev.txt  py38-django32.txt  py38-django42.txt  py39-dev.txt  py39-django32.txt  py39-django42.txt  pypy310-dev.txt  pypy311-dev.txt  pypy38-dev.txt  pypy39-dev.txt  requirements.in  runtime.in
search/: search_index.json
src/custom_storage/: __init__.py  apps.py  conf.py  defaults.py  settings.py  storage.py
tests/: settings.py  test_app_config.py  test_configuration.py  test_django_compatibility.py  test_error_handling.py  test_storage.py  urls.py
tutorial/example/: index.html
tutorial/settings/: index.html
tutorial/storage-classes/: index.html
