[build-system]
requires = [
  "setuptools >= 77; python_version >= '3.9'",
  "setuptools >= 40.8.0; python_version < '3.9'",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "django-custom-storage"
description = "Django application provide custom storage uses S3 and Compressor."
authors = [
    { name = "DLRSP", email = "dlrsp.dev@gmail.com" },
]
requires-python = ">=3.8"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["django", "S3", "compressor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries",
    "Framework :: Django :: 5.2",
]
dependencies = [
    "Django>=3.2",
]

[project.optional-dependencies]
testing = [
    "coverage",
    "codecov",
    "pytest",
    "pytest-django",
]
linting = [
    "flake8",
    "flake8-pyproject",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-tidy-imports",
    "flake8-typing-imports",
    "pylint",
]

[project.urls]
Homepage = "https://github.com/DLRSP/django-custom-storage"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = "custom_storage.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.distutils.bdist_wheel]
universal = false

[tool.flake8]
max-line-length = 80
select = ["E", "F", "W", "B", "B950", "C", "I", "TYP"]
ignore = ["E203", "E501", "W503", "B950"]
per-file-ignores = [
    "**/migrations/*:B950",
]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.run]
branch = true
source = ["custom_storage"]

[tool.coverage.report]
show_missing = true

[tool.black]
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[tool.pytest.ini_options]
addopts = """\
    --strict-config
    --strict-markers
    --ds=tests.settings
    """
django_find_project = false

# bump-my-version
[tool.bumpversion]
current_version = "0.3.1"
commit = true
tag = true
allow_dirty = true

[[tool.bumpversion.files]]
filename = "./src/custom_storage/__init__.py"

